# ezrag

./: .gitignore  README.md  activate_me.bat  activate_venv.bat  delete_venv.bat  install_crap.py  main_ai.py  pyproject.toml  reqs.docx  runez.bat  runez.sh  todos.txt  wtf.bat
docs/airrag_docs/: airag.pptx
docs/email/: disp.txt  email.txt
docs/geography/: capitals.txt  letter.txt  lorem.txt  pj.txt  shoe.txt  truth.txt  zzztruth.txt
docs/reports/: rep1.txt
tools/: download_llm_models.py  g.py  is_cuda_available.py  pyclean.bat  reinstall_pytorch_w_cuda.bat  search_type_by_score.py  simscore.py  windows_doctopdf.py
