[tool.poetry]
name = "ezrag"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.2"
numpy = "^2.1.3"
pandas = "^2.2.3"
seaborn = "^0.13.2"
faiss-cpu = "^1.9.0"
PyMuPDF = "^1.24.13"
psutil = "^6.1.0"
scikit-learn = "^1.5.2"
torch = "^2.5.1"
transformers = "^4.46.2"
sentence-transformers = "^3.2.1"
whoosh = "^2.7.4"
pypdf2 = "^3.0.1"
bitsandbytes = "^0.44.1"
accelerate = ">=0.26.0"
comtypes = "^1.4.8"
pyclean = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
